All style on externals CSS files

--- a/index.html
+++ b/index.html
@@ -85,20 +85,9 @@
         <p><strong>Call to action! It's time!</strong></p>
         <p>Sign up for our product by clicking that button right over there!</p>
       </div>
-      <button style="border: white 2px solid; display: inline">Sign up</button>
+      <button>Sign up</button>
     </div>
 
-    <footer
-      style="
-        height: 80px;
-        background-color: #1f2937;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      "
-    >
-      Copyright ©
-    </footer>
+    <footer>Copyright ©</footer>
   </body>
 </html>
